--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
               <div class="student-featured-glow"></div>
               <div class="student-featured-inner">
                 <div class="student-photo">
-                  <img src="AYAN.jpg" alt="AYAN - CHNM Student" />
+                  <img src="ayan.jpg" alt="AYAN - CHNM Student" />
                 </div>
                 <div class="student-info">
                   <div class="student-featured-header">
@@ -318,7 +318,7 @@
               data-batch="2025–2026"
               data-summary="Assists in identifying and solving common hardware issues like RAM, HDD and power-related faults.">
               <div class="student-photo">
-                <img src="BILAL.jpg" alt="BILAL - CHNM Student" />
+                <img src="bilal.jpg" alt="BILAL - CHNM Student" />
               </div>
               <div class="student-info">
                 <h4 class="student-name">BILAL</h4>
@@ -332,7 +332,7 @@
               data-batch="2025–2026"
               data-summary="Focuses on proper LAN cabling, IP configuration and testing connectivity between systems.">
               <div class="student-photo">
-                <img src="HASHIM.jpg" alt="HASHIM - CHNM Student" />
+                <img src="hashim.jpg" alt="HASHIM - CHNM Student" />
               </div>
               <div class="student-info">
                 <h4 class="student-name">HASHIM</h4>
@@ -346,7 +346,7 @@
               data-batch="2025–2026"
               data-summary="Works on installing operating systems, managing partitions and basic backup before format.">
               <div class="student-photo">
-                <img src="BASIT.jpg" alt="BASIT - CHNM Student" />
+                <img src="basit.jpg" alt="BASIT - CHNM Student" />
               </div>
               <div class="student-info">
                 <h4 class="student-name">BASIT</h4>
@@ -360,7 +360,7 @@
               data-batch="2025–2026"
               data-summary="Helps in connecting printers, scanners and checking device drivers during practicals.">
               <div class="student-photo">
-                <img src="RAYEES.jpg" alt="RAYEES - CHNM Student" />
+                <img src="rayees.jpg" alt="RAYEES - CHNM Student" />
               </div>
               <div class="student-info">
                 <h4 class="student-name">RAYEES</h4>
@@ -374,7 +374,7 @@
               data-batch="2025–2026"
               data-summary="Participates in assembling PCs, connecting cables and testing first boot.">
               <div class="student-photo">
-                <img src="NASIR.jpg" alt="NASIR - CHNM Student" />
+                <img src="nasir.jpg" alt="NASIR - CHNM Student" />
               </div>
               <div class="student-info">
                 <h4 class="student-name">NASIR</h4>
@@ -402,7 +402,7 @@
               data-batch="2025–2026"
               data-summary="Handles basic utility software, antivirus, and system information tools used in lab.">
               <div class="student-photo">
-                <img src="SUHAIL.jpg" alt="SUHAIL - CHNM Student" />
+                <img src="suhail.jpg" alt="SUHAIL - CHNM Student" />
               </div>
               <div class="student-info">
                 <h4 class="student-name">SUHAIL</h4>
@@ -416,7 +416,7 @@
               data-batch="2025–2026"
               data-summary="Helps in keeping lab systems, cables and accessories arranged and ready for practicals.">
               <div class="student-photo">
-                <img src="UMAIR.jpg" alt="UMAIR - CHNM Student" />
+                <img src="umair.jpg" alt="UMAIR - CHNM Student" />
               </div>
               <div class="student-info">
                 <h4 class="student-name">UMAIR</h4>
@@ -430,7 +430,7 @@
               data-batch="2025–2026"
               data-summary="Supports in writing fault descriptions and solutions clearly in practical records.">
               <div class="student-photo">
-                <img src="IKHLAS.jpg" alt="IKHLAS - CHNM Student" />
+                <img src="ikhlas.jpg" alt="IKHLAS - CHNM Student" />
               </div>
               <div class="student-info">
                 <h4 class="student-name">IKHLAS</h4>
@@ -444,7 +444,7 @@
               data-batch="2025–2026"
               data-summary="Helps during live demonstrations, powering systems on/off and preparing setups.">
               <div class="student-photo">
-                <img src="SALMAN.jpg" alt="SALMAN - CHNM Student" />
+                <img src="salman.jpg" alt="SALMAN - CHNM Student" />
               </div>
               <div class="student-info">
                 <h4 class="student-name">SALMAN</h4>
@@ -570,7 +570,7 @@
     </div>
     <div class="footer-bottom">
       <span>© <span id="year"></span> Govt ITI Anantnag – CHNM Trade</span>
-      <span class="footer-credit">Designed for educational purpose</span>
+      <span class="footer-credit">Designed by AYAN</span>
     </div>
   </footer>
 
